force-app/main/default/objects/Follicle_Measurement__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <formula>IF(AND(ISNULL(D1__c), ISNULL(D2__c), ISNULL(D3__c)),
    &quot;&quot;,
    TEXT(
        ROUND(
            (
                D1__c + D2__c + D3__c
            ) /
            (
                IF(D1__c&gt;0, 1, 0) +
                IF(D2__c&gt;0, 1, 0) +
                IF(D3__c&gt;0, 1, 0)
            ),
            1
        )
    ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average</label>
    <type>Text</type>
</CustomField>