force-app/main/default/objects/Follicle_Measurement__c/fields/D1__c.field-meta.xml
<CustomField>
    <fullName>D1__c</fullName>
    <label>D1</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>