force-app/main/default/objects/Follicle_Measurement__c/fields/D3__c.field-meta.xml
<CustomField>
    <fullName>D3__c</fullName>
    <label>D3</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>