force-app/main/default/objects/Follicle_Measurement__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>Follicle Measurements</relationshipLabel>
    <relationshipName>Follicle_Measurements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>